--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ environment:
 
 dependencies:
   flutter_slidable:
-  flutter_svg:
+  flutter_svg: ^0.19.3
   flutter_launcher_icons:
   json_annotation:
   loadmore:
