--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,14 @@ environment:
 dependencies:
   flutter_slidable:
   flutter_svg:
+  flutter_staggered_grid_view: ^0.3.4
+  cached_network_image: ^2.3.2
+  awesome_dialog: ^1.3.0
+  flutter_html: ^1.0.0
+  smooth_page_indicator: ^0.1.5
+  hive: ^1.4.4+1
+  hive_flutter: ^0.3.1
+  hive_generator: ^0.8.2
   flutter_launcher_icons:
   json_annotation:
   loadmore:
@@ -35,6 +43,7 @@ dependencies:
   flutter_bloc:
   equatable:
   flutter_custom_clippers:
+  flutter_auth_buttons:
 
 
   google_fonts:
