--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,11 @@ environment:
 
 dependencies:
   flutter_slidable:
-  flutter_svg:
+  flutter_svg: ^0.22.0
   flutter_staggered_grid_view: ^0.3.4
   cached_network_image: ^2.3.2
   awesome_dialog: ^1.3.0
-  flutter_html: ^1.0.0
+  flutter_html:
   smooth_page_indicator: ^0.1.5
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
